# i18n-redoc-fastapi

./: Makefile  README.md  pyproject.toml  setup.py
src/: web.py
src/api/: routes.py
src/api/v1/: routes.py
src/api/v1/healthcheck/: handlers.py  schemas.py
src/cli/: app.py  i18n.py  run_web.py
src/config/: base.py
src/utils/: i18n.py
translations/en/LC_MESSAGES/: messages.po
translations/ru/LC_MESSAGES/: messages.po
